add blog pages + adapt and add node.js build scripts for blog search and pagination; add page transition fadeouts; fix social share

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
         <!-- Started Section -->
         <div class="section started">
           <div class="started-content">
-            <div class="h-title glitch-effect" data-text="CONTACT">CONTACT</div>
+            <div class="h-title glitch-effect" data-text="Contact">Contact</div>
 
             <!-- Hidden source text for typing -->
             <div class="h-subtitle typing-bread" style="display: none">
