--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <!-- Started Section -->
         <div class="section started">
           <div class="started-content">
-            <div class="h-title glitch-effect" data-text="HELEEN EVERS">
-              HELEEN EVERS
+            <div class="h-title glitch-effect" data-text="Heleen Evers">
+              Heleen Evers
             </div>
 
             <!-- Subtitle -->
