--- a/portfolio.html
+++ b/portfolio.html
@@ -55,8 +55,8 @@
         <!-- Started Section -->
         <div class="section started">
           <div class="started-content">
-            <div class="h-title glitch-effect" data-text="PORTFOLIO">
-              PORTFOLIO
+            <div class="h-title glitch-effect" data-text="Portfolio">
+              Portfolio
             </div>
 
             <!-- Hidden source text for typing -->
@@ -316,48 +316,24 @@
     <!-- Content -->
     <div id="content--cardboard-box" style="display: none">
       <div class="popup-box">
-        <button class="popup-close-inner" type="button" title="Close">
+        <!-- <button class="popup-close-inner" type="button" title="Close">
           &times;
-        </button>
+        </button> -->
+        <span class="popup-close-inner close"></span>
         <div class="image">
           <img src="/assets/img/works/work3.jpg" alt="Cardboard Box" />
         </div>
         <div class="desc">
           <div class="category">Content</div>
-          <h4>Cardboard Box</h4>
+          <h4>Title of this piece</h4>
           <div class="single-post-text">
-            <p>
-              So striking at of to welcomed resolved. Northward by described up
-              household therefore attention. Excellence decisively nay man yet
-              impression for contrasted remarkably.
-            </p>
-            <p>
-              Forfeited you engrossed but gay sometimes explained. Another as
-              studied it to evident. Merry sense given he be arise. Conduct at
-              an replied removal an amongst. Remaining determine few her two
-              cordially admitting old.
-            </p>
-            <p>
-              ^Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-              posuere cubilia Curae; Pellentesque suscipit.
-            </p>
-            <p>
-              Tiled say decay spoil now walls meant house. My mr interest
-              thoughts screened of outweigh removing. Evening society musical
-              besides inhabit ye my. Lose hill well up will he over on.
-              Increasing sufficient everything men him admiration unpleasing.
-            </p>
+            <p>Paragraph.</p>
             <ul>
-              <li>Greatest properly off ham exercise all.</li>
-              <li>Unsatiable invitation its possession nor off.</li>
-              <li>
-                All difficulty estimating unreserved increasing the solicitude.
-              </li>
+              <li>List item.</li>
+              <li>List item.</li>
+              <li>List item.</li>
             </ul>
-            <p>
-              Unpleasant astonished an diminution up partiality. Noisy an their
-              of meant. Death means up civil do an offer wound of.
-            </p>
+            <p>Paragraph.</p>
           </div>
           <a
             href="/posts/first-post.html"
