--- a/resume.html
+++ b/resume.html
@@ -55,7 +55,7 @@
         <!-- Started Section -->
         <div class="section started">
           <div class="started-content">
-            <div class="h-title glitch-effect" data-text="RESUME">RESUME</div>
+            <div class="h-title glitch-effect" data-text="Resume">Resume</div>
 
             <!-- Hidden source text for typing -->
             <div class="h-subtitle typing-bread" style="display: none">
@@ -777,9 +777,15 @@
 
             <div class="box-items">
               <div class="box-item">
-                <div class="image">
-                  <a target="_blank" href="https://www.google.com">
-                    <img src="/assets/img/clients/client_1.png" alt="" />
+                <div class="image client dark">
+                  <a
+                    target="_blank"
+                    href="https://aviarytalent.com/foil-arms-hog"
+                  >
+                    <img
+                      src="https://images.squarespace-cdn.com/content/v1/5ad0dab95cfd7981de9c09c6/53cd202d-ae66-48a2-bd42-601720bcfd6d/Foil%2BArms%2B%26%2BHog%2BLogo-01.png?format=1000w"
+                      alt="Foil Arms & Hog"
+                    />
                     <span class="info">
                       <i class="ri-external-link-line icon"></i>
                     </span>
@@ -788,40 +794,7 @@
               </div>
 
               <div class="box-item">
-                <div class="image">
-                  <a target="_blank" href="https://www.google.com">
-                    <img src="/assets/img/clients/client_2.png" alt="" />
-                    <span class="info">
-                      <i class="ri-external-link-line icon"></i>
-                    </span>
-                  </a>
-                </div>
-              </div>
-
-              <div class="box-item">
-                <div class="image">
-                  <a target="_blank" href="https://www.google.com">
-                    <img src="/assets/img/clients/client_3.png" alt="" />
-                    <span class="info">
-                      <i class="ri-external-link-line icon"></i>
-                    </span>
-                  </a>
-                </div>
-              </div>
-
-              <div class="box-item">
-                <div class="image">
-                  <a target="_blank" href="https://www.google.com">
-                    <img src="/assets/img/clients/client_1.png" alt="" />
-                    <span class="info">
-                      <i class="ri-external-link-line icon"></i>
-                    </span>
-                  </a>
-                </div>
-              </div>
-
-              <div class="box-item">
-                <div class="image">
+                <div class="image client">
                   <a target="_blank" href="https://www.google.com">
                     <img src="/assets/img/clients/client_2.png" alt="" />
                     <span class="info">
@@ -832,7 +805,7 @@
               </div>
 
               <div class="box-item">
-                <div class="image">
+                <div class="image client">
                   <a target="_blank" href="https://www.google.com">
                     <img src="/assets/img/clients/client_3.png" alt="" />
                     <span class="info">
