change all relative links to absolute to prevent style breaks

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <link rel="shortcut icon" href="/assets/img/favicons/favicon.ico" />
 
     <!-- Main CSS -->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
   </head>
 
   <body class="homepage">
@@ -85,13 +85,13 @@
     <div id="sidebar-container"></div>
 
     <!-- Load Components -->
-    <script src="assets/js/menu.js"></script>
+    <script src="/assets/js/menu.js"></script>
 
     <!-- Typed Scripts -->
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-    <script src="assets/js/typewriter.js"></script>
+    <script src="/assets/js/typewriter.js"></script>
 
     <!-- Main JavaScript Files -->
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/main.js"></script>
   </body>
 </html>
