--- a/portfolio.html
+++ b/portfolio.html
@@ -30,8 +30,8 @@
     />
 
     <!-- Main CSS -->
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/popups.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/popups.css" />
   </head>
 
   <body>
@@ -347,13 +347,13 @@
     </div>
 
     <!-- Load Components -->
-    <script src="assets/js/menu.js"></script>
+    <script src="/assets/js/menu.js"></script>
 
     <!-- Typed Scripts -->
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-    <script src="assets/js/typewriter.js"></script>
+    <script src="/assets/js/typewriter.js"></script>
 
     <!-- Main JavaScript Files -->
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/main.js"></script>
   </body>
 </html>
