final design tweaks + blog post template hero + soundcloud

--- a/portfolio.html
+++ b/portfolio.html
@@ -137,7 +137,7 @@
               <div class="box-item f-gallery">
                 <div class="image">
                   <a href="#gallery--works-myproject" class="has-popup-gallery">
-                    <img src="assets/img/works/work1.jpg" alt="My Project" />
+                    <img src="/assets/img/works/work1.jpg" alt="My Project" />
                     <!-- work1-thumb.jpg -->
                     <span class="info">
                       <i class="ri-multi-image-line"></i>
@@ -158,7 +158,10 @@
               <div class="box-item f-content">
                 <div class="image">
                   <a href="#content--cardboard-box" class="has-popup-content">
-                    <img src="assets/img/works/work3.jpg" alt="Cardboard Box" />
+                    <img
+                      src="/assets/img/works/work3.jpg"
+                      alt="Cardboard Box"
+                    />
                     <span class="info">
                       <i class="ri-add-line"></i>
                     </span>
@@ -182,7 +185,7 @@
                     class="has-popup-video"
                   >
                     <img
-                      src="assets/img/works/work4.jpg"
+                      src="/assets/img/works/work4.jpg"
                       alt="Coffee Cup In Hand"
                     />
                     <span class="info">
@@ -209,7 +212,7 @@
                     target="_blank"
                   >
                     <img
-                      src="assets/img/works/work5.jpg"
+                      src="/assets/img/works/work5.jpg"
                       alt="Love & Care Ceramic Bottles"
                     />
                     <span class="info">
@@ -231,10 +234,13 @@
               <!-- Music Item -->
               <div class="box-item f-music">
                 <div class="image">
-                  <a href="#music-player" class="has-popup-music">
+                  <a
+                    href="https://api.soundcloud.com/tracks/790365085"
+                    class="has-popup-music"
+                  >
                     <img
-                      src="assets/img/works/work6.jpg"
-                      alt="Marta Veludo Beautiful Poster"
+                      src="/assets/img/works/work6.jpg"
+                      alt="The Sound Of FAH"
                     />
                     <span class="info">
                       <i class="ri-music-line"></i>
@@ -243,8 +249,10 @@
                 </div>
                 <div class="desc">
                   <div class="category">Music</div>
-                  <a href="#music-player" class="name has-popup-music"
-                    >Marta Veludo Beautiful Poster</a
+                  <a
+                    href="https://api.soundcloud.com/tracks/790365085"
+                    class="name has-popup-music"
+                    >The Sound Of FAH</a
                   >
                 </div>
               </div>
@@ -252,9 +260,9 @@
               <!-- Image Item -->
               <div class="box-item f-image">
                 <div class="image">
-                  <a href="assets/img/works/work7.jpg" class="has-popup-image">
+                  <a href="/assets/img/works/work7.jpg" class="has-popup-image">
                     <img
-                      src="assets/img/works/work7.jpg"
+                      src="/assets/img/works/work7.jpg"
                       alt="Minimal Poster Frame"
                     />
                     <span class="info"><i class="ri-image-line"></i></span>
@@ -263,7 +271,7 @@
                 <div class="desc">
                   <div class="category">Image</div>
                   <a
-                    href="assets/img/works/work7.jpg"
+                    href="/assets/img/works/work7.jpg"
                     class="name has-popup-image"
                   >
                     Minimal Poster Frame
@@ -305,11 +313,11 @@
       class="popup-gallery-source"
       style="display: none"
     >
-      <a href="assets/img/works/work1.jpg" title="First shot description"></a>
+      <a href="/assets/img/works/work1.jpg" title="First shot description"></a>
       <!-- work1-full.jpg -->
-      <a href="assets/img/works/work2.jpg" title="Second shot description"></a>
+      <a href="/assets/img/works/work2.jpg" title="Second shot description"></a>
       <!-- work2-full.jpg -->
-      <a href="assets/img/works/work3.jpg" title="Third shot description"></a>
+      <a href="/assets/img/works/work3.jpg" title="Third shot description"></a>
       <!-- work3-full.jpg -->
     </div>
 
@@ -321,7 +329,7 @@
         </button> -->
         <span class="popup-close-inner close"></span>
         <div class="image">
-          <img src="/assets/img/works/work3.jpg" alt="Cardboard Box" />
+          <img src="/assets/img/works/work3.jpg" alt="Image Caption" />
         </div>
         <div class="desc">
           <div class="category">Content</div>
