--- a/404.html
+++ b/404.html
@@ -32,6 +32,9 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="/assets/img/favicons/favicon.ico" />
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/assets/img/favicons/favicon.ico" />
+
     <!-- Main CSS -->
     <link rel="stylesheet" href="/assets/css/style.css" />
   </head>
