add mobile dropdown and styling for filters

--- a/portfolio.html
+++ b/portfolio.html
@@ -162,6 +162,20 @@
                     />Content
                   </label>
                 </div>
+                <!-- Mobile Filter Dropdown (hidden on desktop) -->
+                <select
+                  id="mobile-filter"
+                  class="mobile-filter-select"
+                  aria-label="Filter items"
+                >
+                  <option value=".box-item" selected>All</option>
+                  <option value=".f-video">Video</option>
+                  <option value=".f-music">Music</option>
+                  <option value=".f-link">Links</option>
+                  <option value=".f-image">Image</option>
+                  <option value=".f-gallery">Gallery</option>
+                  <option value=".f-content">Content</option>
+                </select>
               </div>
             </div>
 
