--- a/portfolio.html
+++ b/portfolio.html
@@ -181,10 +181,13 @@
 
             <div class="box-items portfolio-items">
               <!-- Gallery Item -->
-              <div class="box-item f-gallery" data-date="2025-07-12">
+              <div class="box-item f-gallery" data-date="2023-07-31">
                 <div class="image">
-                  <a href="#gallery--works-myproject" class="has-popup-gallery">
-                    <img src="/assets/img/works/work1.jpg" alt="My Project" />
+                  <a href="#gallery--go-animations" class="has-popup-gallery">
+                    <img
+                      src="/assets/img/works/motion/go-modern.gif"
+                      alt="Good Omens Fanvideo Interstitial Card for the Modern Era"
+                    />
                     <span class="info">
                       <i class="ri-multi-image-line"></i>
                     </span>
@@ -193,20 +196,64 @@
                 <div class="desc">
                   <div class="category">Gallery</div>
                   <a
-                    href="#gallery--works-myproject"
+                    href="#gallery--go-animations"
                     class="name has-popup-gallery"
-                    >My Project</a
+                    >Fanart Animation (Good Omens)</a
+                  >
+                </div>
+              </div>
+
+              <!-- Gallery Item -->
+              <div class="box-item f-gallery" data-date="2020-10-15">
+                <div class="image">
+                  <a href="#gallery--fah-endcards" class="has-popup-gallery">
+                    <img
+                      src="/assets/img/works/motion/fah-toptencard.gif"
+                      alt="Foil Arms and Hog Top 10 Sketches for 2022"
+                    />
+                    <span class="info">
+                      <i class="ri-multi-image-line"></i>
+                    </span>
+                  </a>
+                </div>
+                <div class="desc">
+                  <div class="category">Gallery</div>
+                  <a
+                    href="#gallery--fah-endcards"
+                    class="name has-popup-gallery"
+                    >End Card Motion Graphics (FAH)</a
                   >
                 </div>
               </div>
 
               <!-- Content Item -->
-              <div class="box-item f-content" data-date="2025-07-13">
+              <div class="box-item f-content" data-date="2024-05-23">
                 <div class="image">
-                  <a href="#content--cardboard-box" class="has-popup-content">
+                  <a href="#content--pxl-esports" class="has-popup-content">
                     <img
-                      src="/assets/img/works/work3.jpg"
-                      alt="Cardboard Box"
+                      src="/assets/img/works/motion/pxl-esports-heroanimation.gif"
+                      alt="PXL Esports hero animation"
+                    />
+                    <span class="info">
+                      <i class="ri-add-line"></i>
+                    </span>
+                  </a>
+                </div>
+                <div class="desc">
+                  <div class="category">Content</div>
+                  <a href="#content--pxl-esports" class="name has-popup-content"
+                    >PXL Esports Group Assignment</a
+                  >
+                </div>
+              </div>
+
+              <!-- Content Item -->
+              <div class="box-item f-content" data-date="2021-03-11">
+                <div class="image">
+                  <a href="#content--fah-squatters" class="has-popup-content">
+                    <img
+                      src="assets/img/works/motion/fah-quatters-titles-thumbnail.webp"
+                      alt="Title Sequence for Squatters"
                     />
                     <span class="info">
                       <i class="ri-add-line"></i>
@@ -216,9 +263,9 @@
                 <div class="desc">
                   <div class="category">Content</div>
                   <a
-                    href="#popup--works-cardboard-box"
-                    class="name has-popup-media"
-                    >Cardboard Box</a
+                    href="#content--fah-squatters"
+                    class="name has-popup-content"
+                    >Title Sequence for 'Squatters' (FAH)</a
                   >
                 </div>
               </div>
@@ -353,31 +400,52 @@
 
     <!-- Gallery -->
     <div
-      id="gallery--works-myproject"
+      id="gallery--go-animations"
       class="popup-gallery-source"
       style="display: none"
     >
-      <a href="/assets/img/works/work1.jpg" title="First shot description"></a>
-      <!-- work1-full.jpg -->
-      <a href="/assets/img/works/work2.jpg" title="Second shot description"></a>
-      <!-- work2-full.jpg -->
-      <a href="/assets/img/works/work3.jpg" title="Third shot description"></a>
-      <!-- work3-full.jpg -->
+      <a href="/assets/img/works/motion/go-eden.gif" title="Eden"></a>
+      <a
+        href="/assets/img/works/motion/go-renaissance.gif"
+        title="Renaissance"
+      ></a>
+      <a href="/assets/img/works/motion/go-baroque.gif" title="Baroque"></a>
+      <a href="/assets/img/works/motion/go-choral.gif" title="Choral"></a>
+      <a href="/assets/img/works/motion/go-folk.gif" title="Folk"></a>
+      <a href="/assets/img/works/motion/go-jazz.gif" title="Jazz"></a>
+      <a href="/assets/img/works/motion/go-modern.gif" title="Modern"></a>
+      <a href="/assets/img/works/motion/go-rock.gif" title="Rock"></a>
+      <a href="/assets/img/works/motion/go-today.gif" title="Today"></a>
+      <a href="/assets/img/works/motion/go-end.gif" title="End Card"></a>
+    </div>
+
+    <div
+      id="gallery--fah-endcards"
+      class="popup-gallery-source"
+      style="display: none"
+    >
+      <a
+        href="/assets/img/works/motion/fah-toptencard.gif"
+        title="Top 10 Intro/Outro Card"
+      ></a>
     </div>
 
     <!-- Content -->
-    <div id="content--cardboard-box" style="display: none">
+    <div id="content--pxl-esports" style="display: none">
       <div class="popup-box">
         <!-- <button class="popup-close-inner" type="button" title="Close">
           &times;
         </button> -->
         <span class="popup-close-inner close"></span>
         <div class="image">
-          <img src="/assets/img/works/work3.jpg" alt="Image Caption" />
+          <img
+            src="/assets/img/works/motion/pxl-esports-heroanimation.gif"
+            alt="PXL Esports hero animation"
+          />
         </div>
         <div class="desc">
           <div class="category">Content</div>
-          <h4>Title of this piece</h4>
+          <h4>PXL Esports rebranding & webdesign</h4>
           <div class="single-post-text">
             <p>Paragraph.</p>
             <ul>
@@ -388,7 +456,55 @@
             <p>Paragraph.</p>
           </div>
           <a
-            href="/posts/first-post.html"
+            href="/posts/pxl-esports-project.html"
+            target="_blank"
+            class="btn"
+            data-text="View Project"
+            >View Project</a
+          >
+        </div>
+      </div>
+    </div>
+
+    <div id="content--fah-squatters" style="display: none">
+      <div class="popup-box">
+        <!-- <button class="popup-close-inner" type="button" title="Close">
+          &times;
+        </button> -->
+        <span class="popup-close-inner close"></span>
+        <div
+          class="image video-preview"
+          data-video-id="rCU4bWqnpzQ"
+          data-start-time="115"
+        >
+          <div
+            class="video-thumb"
+            style="
+              background-image: url('https://img.youtube.com/vi/c7zg06B7k9M/hqdefault.jpg');
+              cursor: pointer;
+              position: relative;
+            "
+          >
+            <span class="play-btn" aria-label="Play Video">▶</span>
+          </div>
+        </div>
+        <div class="desc">
+          <div class="category">Content</div>
+          <h4>
+            Title Sequence for Foil Arms and Hog's first sitcom episode
+            'Squatters'
+          </h4>
+          <div class="single-post-text">
+            <p>Paragraph.</p>
+            <ul>
+              <li>List item.</li>
+              <li>List item.</li>
+              <li>List item.</li>
+            </ul>
+            <p>Paragraph.</p>
+          </div>
+          <a
+            href="/posts/fah-squatters-titles.html"
             target="_blank"
             class="btn"
             data-text="View Project"
