--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
     />
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/assets/img/favicons/favicon.ico" />
+    <link rel="shortcut icon" href="/assets/images/favicons/favicon.ico" />
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="/assets/css/style.css" />
@@ -41,7 +41,7 @@
     <!-- Preloader -->
     <div id="preloader" class="preloader">
       <div class="pre-inner">
-        <div class="load typing-load" style="display: none">
+        <div class="typing-load">
           <p>loading...</p>
         </div>
         <span class="typed-load"></span>
