--- a/json-helper.html
+++ b/json-helper.html
@@ -27,13 +27,13 @@
         margin-top: 1.5rem;
         padding: 0.75rem 1.5rem;
         font-size: 1rem;
-        background: #f26b38;
+        background: var(--color-primary);
         border: none;
         color: white;
         cursor: pointer;
       }
       pre {
-        background: #f6f6f6;
+        background: var(--color-bg-light);
         padding: 1rem;
         white-space: pre-wrap;
         word-wrap: break-word;
