Separate glitch css and add RBG glitch version + change color palette

--- a/helpers/glitch-tests.html
+++ b/helpers/glitch-tests.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="/assets/css/style.css" />
 
     <!-- Glitch Effect -->
-    <link rel="stylesheet" href="/assets/css/glitch-simple.css" />
+    <link rel="stylesheet" href="/assets/css/glitch-rgb.css" />
   </head>
 
   <body class="homepage">
@@ -60,7 +60,7 @@
         <!-- Started Section -->
         <div class="section started">
           <div class="started-content">
-            <div class="h-title glitch-effect" data-text="Heleen Evers">
+            <div class="h-title glitch-rgb" data-text="Heleen Evers">
               Heleen Evers
             </div>
 
