--- a/portfolio.html
+++ b/portfolio.html
@@ -35,6 +35,9 @@
     <!-- Main CSS -->
     <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="stylesheet" href="/assets/css/popups.css" />
+
+    <!-- Glitch Effect -->
+    <link rel="stylesheet" href="/assets/css/glitch-simple.css" />
   </head>
 
   <body>
