--- a/404.html
+++ b/404.html
@@ -34,6 +34,9 @@
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="/assets/css/style.css" />
+
+    <!-- Glitch Effect -->
+    <link rel="stylesheet" href="/assets/css/glitch-rgb.css" />
   </head>
 
   <body class="homepage">
