Add privacy.html + Write README.md content

--- a/404.html
+++ b/404.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="/assets/css/style.css" />
 
     <!-- Glitch Effect -->
-    <link rel="stylesheet" href="/assets/css/glitch-rgb.css" />
+    <link rel="stylesheet" href="/assets/css/glitch-simple.css" />
   </head>
 
   <body class="homepage">
@@ -65,8 +65,8 @@
             <!-- Hidden source text for typing -->
             <div class="h-subtitle typing-bread" style="display: none">
               <p>
-                <a href="index.html">Sorry!</a>
-                <a href="resume.html">Page not found.</a>
+                Sorry! Page not found.
+                <a href="index.html">Go back home?</a>
               </p>
             </div>
 
